Fixed dark mode styles

--- a/src/components/molecules/Character/character.scss
+++ b/src/components/molecules/Character/character.scss
@@ -44,13 +44,9 @@
       &-title {
         color: $colorSecondaryGrey;
       }
-
-      &-value {
-        color: $colorPrimaryDark;
-      }
     }
 
-    &-episodes {
+    &-episodes h4 {
       color: $colorSecondaryGrey;
     }
   }
